# cookiecutter-datakit-personal

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  _quarto.yml  agents.md  helpers.sh  outputs.sh  outputs_index.py  pyproject.toml
{{cookiecutter.project_name}}/.agents/skills/gather-repo-context/: SKILL.md
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  postStart.sh
{{cookiecutter.project_name}}/.github/: CODEOWNERS
{{cookiecutter.project_name}}/config/: datakit-data.json
{{cookiecutter.project_name}}/scripts/: __init__.py
{{cookiecutter.project_name}}/scripts/markdown/: __init__.py  _quarto.yml  python_template.qmd  styles.css
